--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script>
+      window.baseUrl = "<%= htmlWebpackPlugin.options.publicPath %>";
+    </script>
 </head>
 <body>
     <div id="app"></div>
